--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,6 +1,5 @@
 # Dependencies
 node_modules/
-.pnpm-debug.log*
 
 # Next.js
 .next/
@@ -8,13 +7,19 @@ out/
 
 # Production
 build/
-dist/
 
-# Environment variables
+# Environment Variables - LOCKED DOWN
+*.env*
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+env.production
+env.example
+env.template
+env.sample
+env.mjs
 
 # Vercel
 .vercel
@@ -32,3 +37,77 @@ Thumbs.db
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# Security - NEVER commit these
+secrets/
+keys/
+certificates/
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
