--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@anthropic-ai/sdk": "^0.24.3",
     "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/s3-request-presigner": "^3.658.1",
+    "@clerk/nextjs": "^6.28.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -97,12 +98,14 @@
     "stripe": "^16.8.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
     "@types/nodemailer": "^6.4.17",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.30.0",
     "eslint-config-next": "15.3.4",
     "postcss": "^8.5",
